--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "typescript": "latest",
     "wrangler": "latest"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@jsquash/avif": "^2.1.1",
+    "@jsquash/webp": "^1.5.0",
+    "gulp-avif": "^1.1.1"
+  }
 }
